# kldnk-stopwatch

./: .gitignore  CMakeLists.txt  IStopwatch.h  KldnkStopwatch.cpp  LoggingEventListener.h  README.md  Stopwatch.h  StopwatchBase.cpp  StopwatchBase.h  StopwatchSettings.h  StopwatchSource.cpp  StopwatchSource.h  StopwatchType.h  TimeUtil.cpp  TimeUtil.h  Timer.h  ft2helper.c  kldnk-stopwatch.c  kldnk-stopwatch.cbp  kldnk-stopwatch.h  stopwatch-settings.c  stopwatch-settings.h  stopwatch-type.c  stopwatch-type.h  stopwatch-wrapper.c  stopwatch-wrapper.h  time-util.c  time-util.h
actions/: IStopwatchAction.h  StopwatchActionBase.h  SwitchSceneAction.cpp  SwitchSceneAction.h
data/locale/: de-DE.ini  en-US.ini
events/: IStopwatchEvent.h  IStopwatchEventListener.h  LoggingEventListener.h  StopwatchEventBase.h  StopwatchFinishEvent.h  StopwatchResetEvent.h  StopwatchStartEvent.h  StopwatchStopEvent.h
